<resources>
    <!-- <string name="app_name">Mummas Grocery</string>-->

    <string name="app_name">"@Home"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_settings">Settings</string>
    <string name="category">Category</string>
    <string name="product">Product</string>
    <string name="sub_category">Sub Category</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="review_order">Review Order</string>
    <string name="register">Register</string>
    <string name="your_cart">Your Cart</string>
    <string name="confirm_message">Your order item List :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Registration Form Column-->
    <string name="full_name">Full Name</string>
    <string name="email_id">Email Id</string>
    <string name="address_line">Address Line</string>
    <string name="town_city">Town/City</string>
    <string name="pincode">Pincode/Zip</string>
    <string name="phone_no">Phone No</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="paytm">Paytm</string>
    <string name="cash_on_d">Cash On Delivery</string>
    <string name="order_successfull">Your Order Is Successfully Placed</string>
    <string name="thank_you">Thank You</string>
    <string name="checkout">Checkout</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_status">Order Status</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="contact_details">Contact Details</string>
    <string name="current_orders">Current Orders</string>
    <string name="order_history">Order History</string>
    <string name="ok">OK</string>
    <string name="title_activity_order_details">OrderDetailsActivity</string>
    <string name="product_desc">Product Description</string>
    <string name="total_items">Total Items: </string>
    <string name="order_type">Order Type: </string>
    <string name="order_total">Order Total: </string>
    <string name="payment_method">Payment Mode: </string>
    <string name="estimated_delivery">Estimated Delivery: </string>
    <string name="order_details">Order Details</string>
    <string name="tnc">Terms And Conditions</string>
    <string name="about_us">About Us</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="mobile_no">Mobile No</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="details">Details</string>


</resources>
