<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/toolbar_view"
        layout="@layout/toolbar_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/tvSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp"
                    android:text="@string/contact_details" />

                <EditText
                    android:id="@+id/user_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/full_name"
                    android:padding="@dimen/ten_dp" />

                <EditText
                    android:id="@+id/user_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/email_id"
                    android:padding="@dimen/ten_dp" />

                <EditText
                    android:id="@+id/user_phone_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/phone_no"
                    android:inputType="number"
                    android:padding="@dimen/ten_dp" />

                <!-- <EditText
                     android:id="@+id/user_password_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/five_dp"
                     android:background="@drawable/edit_text_bg"
                     android:hint="@string/password"
                     android:inputType="textPassword"
                     android:padding="@dimen/ten_dp" />-->

                <TextView
                    style="@style/tvSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp"
                    android:text="@string/delivery_address" />

                <EditText
                    android:id="@+id/user_address_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/address_line"
                    android:padding="@dimen/ten_dp" />

                <EditText
                    android:id="@+id/user_city_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/town_city"
                    android:padding="@dimen/ten_dp" />

                <EditText
                    android:id="@+id/user_pin_code_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five_dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/pincode"
                    android:padding="@dimen/ten_dp" />


                <Button
                    android:id="@+id/next_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/five_dp"
                    android:hint="@string/next"
                    android:theme="@style/AppTheme.PrimaryButton" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>