<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="@dimen/ten_dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/tvSubTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/name"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/name_view"
            style="@style/tvSubTitle"
            android:layout_width="0dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/tvSubTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/address"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/address_view"
            style="@style/tvSubTitle"
            android:layout_width="0dp"
            android:layout_weight="2" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/tvSubTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/mobile_no"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/mobile_view"
            style="@style/tvSubTitle"
            android:layout_width="0dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/tvSubTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/email_id"
            android:textColor="@color/colorPrimary" />


        <TextView
            android:id="@+id/email_view"
            style="@style/tvSubTitle"
            android:layout_width="0dp"
            android:layout_weight="2" />
    </LinearLayout>
</LinearLayout>
